css/buddypress.css
/* Credits : @karmatosed, @hnla, @Noel_Tock, @boonebgorges, @jjj
/* =TABLE OF CONTENTS
=======================================================
01:  Globals
02:  Activity
02b: Activity > Post form
02c: Activity > Entry
02d: Activity > Comments
03:  Members
03b: Members > Profile
03c: Members > Directory
03d: Members > Register
04:  Group
04b: Group > Directory
04c: Group > Profile
04d: Group > Create
05:  Forum
05b: Forum > Directory
06:  Blogs
06b: Blog > Directory
07:  Messages
08:  Notifications and notices
09:  Core widgets (do we still need?)
10:  Forms
11:  Buttons and clicks
12:  Actions
13:  Navigation
13b: Navigation > Pagination
13c: Navigation > Loading
14: Plugins
*/

/* 01:  Globals
-------------------------------------------------------------- */
#buddypress .link-list, #buddypress .directory-list, #buddypress .nav-list ul{
	list-style: none;
	margin: 0;
	padding: 0;
}
#buddypress .directory-list li, #buddypress .nav-list li{
	margin: 0;
	padding: 0;
}
#buddypress .activity-span{

}
#buddypress .highlight{

}
#buddypress .search-directory{
	float: right;
}
#buddypress img.wp-smiley {
	border: none !important;
	clear: none !important;
	float: none !important;
	margin: 0 !important;
	padding: 0 !important;
}
#buddypress .directory-list{
	margin: 3% 0 0 0;
}
#buddypress .directory-list li{
	float: left;
	list-style: none;
	padding: 0 0 3% 0;
}
#buddypress .secondary-column{
	float:left;
	width:30%;
}
#buddypress .primary-column{
	float:left;
	width:70%;
}
#buddypress .last{

}
#buddypress .filter{

}
#buddypress .emphasis{
	font-weight: bold;
}
/* 02:  Activity
-------------------------------------------------------------- */
#buddypress #buddypress-activity{

}
#buddypress #activity-stream{

}
#buddypress .nav-activity-filter{

}
#buddypress li#activity-all{

}
#buddypress li#activity-friends{

}
#buddypress li#activity-groups{

}
#buddypress li#activity-favorties{

}
#buddypress li#activity-mentions{

}
#buddypress #activity-filter{

}
#buddypress #activity-filter-by{

}
#buddypress #nav-activity-filter{

}
#buddypress .activity-span{

}
/* 02b:  Activity > Post form
-------------------------------------------------------------- */
#buddypress #update-avatar{
	float: left;
}
#buddypress #update-content{
	margin-left: 60px;
	padding: 0 0 20px 20px;
}
#buddypress #update-textarea textarea{
	padding: 5px;
	width: 100%;
}
#buddypress #update-submit{
	float: right;
}
#buddypress #update-box{
	float: left;
}
#buddypress #update-form p.message-update{
	margin: 0 0 20px 80px;
}
#buddypress .update-in{

}
#buddypress .update-object{

}
#buddypress .update-hidden-object{

}
#buddypress .update-hidden-in{

}
#buddypress #update-form{
	padding: 0 0 20px 0;
}
/* 02c:  Activity > Entry
-------------------------------------------------------------- */
#buddypress .activity-header{
	float: left;
	margin: 0 0 2% 0;
	width: 60px;
}
#buddypress .activity-avatar{

}
#buddypress .activity-inreply{

}
#buddypress .activity-body{
	margin: 0 0 0 60px;
}
#buddypress .activity-meta{
}
#buddypress .activity-meta a{
}
#buddypress .activity-actions{

}
#buddypress .directory-list .activity-actions li{
	display: inline;
	margin: 0;
}
#buddypress .directory-list .activity-actions li:after {
  content: ' | ';
}

#buddypress .directory-list .activity-actions li:last-child:after {
  content: '';
}
#buddypress .activity-delete{

}
#buddypress .activity-comments{

}
#buddypress .activity-comments-label{

}
#buddypress .activity-comment-avatars{

}
/* unsure about these .ac classes - no semantic name seems to come to mind - TL*/
#buddypress .ac-reply-avatar{

}
#buddypress .ac-reply-content{

}
#buddypress .ac-input{

}
/* 02d:  Activity > Comments
-------------------------------------------------------------- */
#buddypress li.activity-comment{

}
#buddypress .comment-avatar{

}
#buddypress .comment-meta{

}
#buddypress .comment-content{

}
#buddypress .comment-options{

}
#buddypress .comment-reply{

}
#buddypress .comment-delete{

}
/* 03:  Members
-------------------------------------------------------------- */
#buddypress #member-navigaiton{

}
#buddypress #member-activate{

}
#buddypress #search-members{

}
#buddypress #form-members{

}
#buddypress #member-directory{

}
/* 03b: Member > Profile
-------------------------------------------------------------- */
#buddypress #member-sidebar{

}
#buddypress #member-panel{
}
#buddypress #member-profile{
	float:left;
	width:70%;
}
#buddypress nav#member-navigation{

}
#buddypress #member-header{

}
#buddypress #member-activity{

}
#buddypress #avatar-upload-form{

}
#buddypress #profile-edit-form{

}
#buddypress .profile-fields{

}
#buddypress #member-activity{

}
#buddypress #member-profile{

}
#buddypress #member-header{

}
#buddypress #member-panel{

}
/* 03c: Member > Directory
-------------------------------------------------------------- */
#buddypress #members-directory{

}
@media only screen and (min-width : 481px) {
	#buddypress #members-list{
		-moz-column-count: 2;
	    -moz-column-gap: 10px;
	    -webkit-column-count: 2;
	    -webkit-column-gap: 10px;
	    column-count: 2;
	    column-gap: 10px;
	    width: 100%;
	}
}
@media only screen and (max-width : 480px) {
	#buddypress #members-list{
		-moz-column-count: 1;
	    -moz-column-gap: 10px;
	    -webkit-column-count: 1;
	    -webkit-column-gap: 10px;
	    column-count: 1;
	    column-gap: 10px;
	    width: 100%;
	}
}
#buddypress #members-list li{
	display: inline-block;
    margin-bottom: 10px;
    width: 100%;
}
#buddypress .member-avatar{

}
#buddypress .member-details{

}
#buddypress .member-title{

}
#buddypress .member-activity{

}
#buddypress .member-action{

}
/* 03d: Member > Register
-------------------------------------------------------------- */
#buddypress #register{

}
#buddypress #profile-details{

}
#buddypress .editfield{

}
#buddypress .register-section{

}
#buddypress #blog-details{

}
#buddypress .datebox{

}
#buddypress .field-visibility-settings{

}
/* ... */

